bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones funcmain

   2  funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE LLA_AB cuerpofuncion LLA_CE

   3  definiciones : definiciones definicion
   4               |

   5  definicion : defvar
   6             | funcion

   7  defvaropc : defvaropc defvar
   8            |

   9  defvar : RES_VAR lvar tipo SIM_PC

  10  lvar : lvar SIM_CO IDENT
  11       | IDENT

  12  funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE tipo LLA_AB cuerpofuncion LLA_CE
  13          | RES_FUNC IDENT PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE

  14  cuerpofuncion : defvaropc sentenciasopc

  15  parametrosopc : parametros
  16                |

  17  parametros : parametros SIM_CO parametro
  18             | parametro

  19  parametro : IDENT tipo

  20  tipo : RES_INT
  21       | RES_F32
  22       | RES_CHAR
  23       | COR_AB CTE_ENTERA COR_CE tipo
  24       | RES_STRUCT LLA_AB campos LLA_CE

  25  campos : campos campo
  26         | campo

  27  campo : lvar tipo SIM_PC

  28  while : RES_WHILE PAR_AB expresion PAR_CE LLA_AB sentencias LLA_CE
  29        | RES_WHILE expresion LLA_AB sentencias LLA_CE

  30  if : RES_IF PAR_AB expresion PAR_CE LLA_AB sentencias LLA_CE else
  31     | RES_IF expresion LLA_AB sentencias LLA_CE else

  32  else : RES_ELSE LLA_AB sentencias LLA_CE
  33       | RES_ELSE PAR_AB PAR_CE LLA_AB sentencias LLA_CE
  34       |

  35  sentenciasopc : sentencias
  36                |

  37  sentencias : sentencias sentencia
  38             | sentencia

  39  sentencia : RES_WRITE PAR_AB expresiones PAR_CE SIM_PC
  40            | RES_READ PAR_AB expresiones PAR_CE SIM_PC
  41            | expresion SIM_IG expresion SIM_PC
  42            | RES_RET expresion SIM_PC
  43            | while
  44            | if
  45            | IDENT PAR_AB PAR_CE SIM_PC
  46            | IDENT PAR_AB expresiones PAR_CE SIM_PC

  47  expresiones : expresiones SIM_CO expresion
  48              | expresion

  49  expresion : expresion OP_MAS expresion
  50            | expresion OP_MENOS expresion
  51            | expresion OP_MUL expresion
  52            | expresion OP_DIV expresion
  53            | expresion OP_MOD expresion
  54            | expresion BOOL_AND expresion
  55            | expresion BOOL_OR expresion
  56            | BOOL_NOT expresion
  57            | expresion SIM_MA expresion
  58            | expresion SIM_ME expresion
  59            | expresion SIM_MAIG expresion
  60            | expresion SIM_MEIG expresion
  61            | expresion SIM_DIST expresion
  62            | expresion SIM_COMIG expresion
  63            | OP_MENOS expresion
  64            | PAR_AB expresion PAR_CE
  65            | IDENT
  66            | CTE_ENTERA
  67            | CTE_DECIMAL
  68            | CHAR
  69            | IDENT PAR_AB expresiones PAR_CE
  70            | IDENT PAR_AB PAR_CE
  71            | tipo PAR_AB expresion PAR_CE
  72            | expresion COR_AB expresion COR_CE
  73            | expresion SIM_PTO IDENT

state 0
	$accept : . programa $end  (0)
	definiciones : .  (4)

	.  reduce 4

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . funcmain  (1)
	definiciones : definiciones . definicion  (3)

	RES_VAR  shift 3
	RES_FUNC  shift 4
	.  error

	funcmain  goto 5
	definicion  goto 6
	defvar  goto 7
	funcion  goto 8


state 3
	defvar : RES_VAR . lvar tipo SIM_PC  (9)

	IDENT  shift 9
	.  error

	lvar  goto 10


state 4
	funcmain : RES_FUNC . RES_MAIN PAR_AB PAR_CE LLA_AB cuerpofuncion LLA_CE  (2)
	funcion : RES_FUNC . IDENT PAR_AB parametrosopc PAR_CE tipo LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC . IDENT PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE  (13)

	IDENT  shift 11
	RES_MAIN  shift 12
	.  error


state 5
	programa : definiciones funcmain .  (1)

	.  reduce 1


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : defvar .  (5)

	.  reduce 5


state 8
	definicion : funcion .  (6)

	.  reduce 6


state 9
	lvar : IDENT .  (11)

	.  reduce 11


state 10
	defvar : RES_VAR lvar . tipo SIM_PC  (9)
	lvar : lvar . SIM_CO IDENT  (10)

	COR_AB  shift 13
	SIM_CO  shift 14
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 19


state 11
	funcion : RES_FUNC IDENT . PAR_AB parametrosopc PAR_CE tipo LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC IDENT . PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE  (13)

	PAR_AB  shift 20
	.  error


state 12
	funcmain : RES_FUNC RES_MAIN . PAR_AB PAR_CE LLA_AB cuerpofuncion LLA_CE  (2)

	PAR_AB  shift 21
	.  error


state 13
	tipo : COR_AB . CTE_ENTERA COR_CE tipo  (23)

	CTE_ENTERA  shift 22
	.  error


state 14
	lvar : lvar SIM_CO . IDENT  (10)

	IDENT  shift 23
	.  error


state 15
	tipo : RES_INT .  (20)

	.  reduce 20


state 16
	tipo : RES_F32 .  (21)

	.  reduce 21


state 17
	tipo : RES_CHAR .  (22)

	.  reduce 22


state 18
	tipo : RES_STRUCT . LLA_AB campos LLA_CE  (24)

	LLA_AB  shift 24
	.  error


state 19
	defvar : RES_VAR lvar tipo . SIM_PC  (9)

	SIM_PC  shift 25
	.  error


state 20
	funcion : RES_FUNC IDENT PAR_AB . parametrosopc PAR_CE tipo LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC IDENT PAR_AB . parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE  (13)
	parametrosopc : .  (16)

	IDENT  shift 26
	PAR_CE  reduce 16

	parametrosopc  goto 27
	parametros  goto 28
	parametro  goto 29


state 21
	funcmain : RES_FUNC RES_MAIN PAR_AB . PAR_CE LLA_AB cuerpofuncion LLA_CE  (2)

	PAR_CE  shift 30
	.  error


state 22
	tipo : COR_AB CTE_ENTERA . COR_CE tipo  (23)

	COR_CE  shift 31
	.  error


state 23
	lvar : lvar SIM_CO IDENT .  (10)

	.  reduce 10


state 24
	tipo : RES_STRUCT LLA_AB . campos LLA_CE  (24)

	IDENT  shift 9
	.  error

	lvar  goto 32
	campos  goto 33
	campo  goto 34


state 25
	defvar : RES_VAR lvar tipo SIM_PC .  (9)

	.  reduce 9


state 26
	parametro : IDENT . tipo  (19)

	COR_AB  shift 13
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 35


state 27
	funcion : RES_FUNC IDENT PAR_AB parametrosopc . PAR_CE tipo LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC IDENT PAR_AB parametrosopc . PAR_CE LLA_AB cuerpofuncion LLA_CE  (13)

	PAR_CE  shift 36
	.  error


state 28
	parametrosopc : parametros .  (15)
	parametros : parametros . SIM_CO parametro  (17)

	SIM_CO  shift 37
	PAR_CE  reduce 15


state 29
	parametros : parametro .  (18)

	.  reduce 18


state 30
	funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE . LLA_AB cuerpofuncion LLA_CE  (2)

	LLA_AB  shift 38
	.  error


state 31
	tipo : COR_AB CTE_ENTERA COR_CE . tipo  (23)

	COR_AB  shift 13
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 39


state 32
	lvar : lvar . SIM_CO IDENT  (10)
	campo : lvar . tipo SIM_PC  (27)

	COR_AB  shift 13
	SIM_CO  shift 14
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 40


state 33
	tipo : RES_STRUCT LLA_AB campos . LLA_CE  (24)
	campos : campos . campo  (25)

	LLA_CE  shift 41
	IDENT  shift 9
	.  error

	lvar  goto 32
	campo  goto 42


state 34
	campos : campo .  (26)

	.  reduce 26


state 35
	parametro : IDENT tipo .  (19)

	.  reduce 19


state 36
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE . tipo LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE . LLA_AB cuerpofuncion LLA_CE  (13)

	LLA_AB  shift 43
	COR_AB  shift 13
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 44


state 37
	parametros : parametros SIM_CO . parametro  (17)

	IDENT  shift 26
	.  error

	parametro  goto 45


state 38
	funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE LLA_AB . cuerpofuncion LLA_CE  (2)
	defvaropc : .  (8)

	.  reduce 8

	cuerpofuncion  goto 46
	defvaropc  goto 47


state 39
	tipo : COR_AB CTE_ENTERA COR_CE tipo .  (23)

	.  reduce 23


state 40
	campo : lvar tipo . SIM_PC  (27)

	SIM_PC  shift 48
	.  error


state 41
	tipo : RES_STRUCT LLA_AB campos LLA_CE .  (24)

	.  reduce 24


state 42
	campos : campos campo .  (25)

	.  reduce 25


state 43
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE LLA_AB . cuerpofuncion LLA_CE  (13)
	defvaropc : .  (8)

	.  reduce 8

	cuerpofuncion  goto 49
	defvaropc  goto 47


state 44
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE tipo . LLA_AB cuerpofuncion LLA_CE  (12)

	LLA_AB  shift 50
	.  error


state 45
	parametros : parametros SIM_CO parametro .  (17)

	.  reduce 17


state 46
	funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE LLA_AB cuerpofuncion . LLA_CE  (2)

	LLA_CE  shift 51
	.  error


state 47
	defvaropc : defvaropc . defvar  (7)
	cuerpofuncion : defvaropc . sentenciasopc  (14)
	sentenciasopc : .  (36)

	CTE_ENTERA  shift 52
	CTE_DECIMAL  shift 53
	PAR_AB  shift 54
	COR_AB  shift 13
	CHAR  shift 55
	IDENT  shift 56
	OP_MENOS  shift 57
	BOOL_NOT  shift 58
	RES_READ  shift 59
	RES_WRITE  shift 60
	RES_WHILE  shift 61
	RES_IF  shift 62
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_VAR  shift 3
	RES_STRUCT  shift 18
	RES_RET  shift 63
	LLA_CE  reduce 36

	defvar  goto 64
	tipo  goto 65
	sentenciasopc  goto 66
	while  goto 67
	expresion  goto 68
	sentencias  goto 69
	if  goto 70
	sentencia  goto 71


state 48
	campo : lvar tipo SIM_PC .  (27)

	.  reduce 27


state 49
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion . LLA_CE  (13)

	LLA_CE  shift 72
	.  error


state 50
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE tipo LLA_AB . cuerpofuncion LLA_CE  (12)
	defvaropc : .  (8)

	.  reduce 8

	cuerpofuncion  goto 73
	defvaropc  goto 47


state 51
	funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE LLA_AB cuerpofuncion LLA_CE .  (2)

	.  reduce 2


state 52
	expresion : CTE_ENTERA .  (66)

	.  reduce 66


state 53
	expresion : CTE_DECIMAL .  (67)

	.  reduce 67


state 54
	expresion : PAR_AB . expresion PAR_CE  (64)

	CTE_ENTERA  shift 52
	CTE_DECIMAL  shift 53
	PAR_AB  shift 54
	COR_AB  shift 13
	CHAR  shift 55
	IDENT  shift 74
	OP_MENOS  shift 57
	BOOL_NOT  shift 58
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 65
	expresion  goto 75


state 55
	expresion : CHAR .  (68)

	.  reduce 68


state 56
	sentencia : IDENT . PAR_AB PAR_CE SIM_PC  (45)
	sentencia : IDENT . PAR_AB expresiones PAR_CE SIM_PC  (46)
	expresion : IDENT .  (65)
	expresion : IDENT . PAR_AB expresiones PAR_CE  (69)
	expresion : IDENT . PAR_AB PAR_CE  (70)

	PAR_AB  shift 76
	COR_AB  reduce 65
	OP_MAS  reduce 65
	OP_MENOS  reduce 65
	OP_MUL  reduce 65
	OP_DIV  reduce 65
	OP_MOD  reduce 65
	SIM_COMIG  reduce 65
	SIM_DIST  reduce 65
	SIM_MAIG  reduce 65
	SIM_MEIG  reduce 65
	SIM_IG  reduce 65
	SIM_MA  reduce 65
	SIM_ME  reduce 65
	BOOL_AND  reduce 65
	BOOL_OR  reduce 65
	SIM_PTO  reduce 65


state 57
	expresion : OP_MENOS . expresion  (63)

	CTE_ENTERA  shift 52
	CTE_DECIMAL  shift 53
	PAR_AB  shift 54
	COR_AB  shift 13
	CHAR  shift 55
	IDENT  shift 74
	OP_MENOS  shift 57
	BOOL_NOT  shift 58
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 65
	expresion  goto 77


state 58
	expresion : BOOL_NOT . expresion  (56)

	CTE_ENTERA  shift 52
	CTE_DECIMAL  shift 53
	PAR_AB  shift 54
	COR_AB  shift 13
	CHAR  shift 55
	IDENT  shift 74
	OP_MENOS  shift 57
	BOOL_NOT  shift 58
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 65
	expresion  goto 78


state 59
	sentencia : RES_READ . PAR_AB expresiones PAR_CE SIM_PC  (40)

	PAR_AB  shift 79
	.  error


state 60
	sentencia : RES_WRITE . PAR_AB expresiones PAR_CE SIM_PC  (39)

	PAR_AB  shift 80
	.  error


state 61
	while : RES_WHILE . PAR_AB expresion PAR_CE LLA_AB sentencias LLA_CE  (28)
	while : RES_WHILE . expresion LLA_AB sentencias LLA_CE  (29)

	CTE_ENTERA  shift 52
	CTE_DECIMAL  shift 53
	PAR_AB  shift 81
	COR_AB  shift 13
	CHAR  shift 55
	IDENT  shift 74
	OP_MENOS  shift 57
	BOOL_NOT  shift 58
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 65
	expresion  goto 82


state 62
	if : RES_IF . PAR_AB expresion PAR_CE LLA_AB sentencias LLA_CE else  (30)
	if : RES_IF . expresion LLA_AB sentencias LLA_CE else  (31)

	CTE_ENTERA  shift 52
	CTE_DECIMAL  shift 53
	PAR_AB  shift 83
	COR_AB  shift 13
	CHAR  shift 55
	IDENT  shift 74
	OP_MENOS  shift 57
	BOOL_NOT  shift 58
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 65
	expresion  goto 84


state 63
	sentencia : RES_RET . expresion SIM_PC  (42)

	CTE_ENTERA  shift 52
	CTE_DECIMAL  shift 53
	PAR_AB  shift 54
	COR_AB  shift 13
	CHAR  shift 55
	IDENT  shift 74
	OP_MENOS  shift 57
	BOOL_NOT  shift 58
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 65
	expresion  goto 85


state 64
	defvaropc : defvaropc defvar .  (7)

	.  reduce 7


state 65
	expresion : tipo . PAR_AB expresion PAR_CE  (71)

	PAR_AB  shift 86
	.  error


state 66
	cuerpofuncion : defvaropc sentenciasopc .  (14)

	.  reduce 14


state 67
	sentencia : while .  (43)

	.  reduce 43


state 68
	sentencia : expresion . SIM_IG expresion SIM_PC  (41)
	expresion : expresion . OP_MAS expresion  (49)
	expresion : expresion . OP_MENOS expresion  (50)
	expresion : expresion . OP_MUL expresion  (51)
	expresion : expresion . OP_DIV expresion  (52)
	expresion : expresion . OP_MOD expresion  (53)
	expresion : expresion . BOOL_AND expresion  (54)
	expresion : expresion . BOOL_OR expresion  (55)
	expresion : expresion . SIM_MA expresion  (57)
	expresion : expresion . SIM_ME expresion  (58)
	expresion : expresion . SIM_MAIG expresion  (59)
	expresion : expresion . SIM_MEIG expresion  (60)
	expresion : expresion . SIM_DIST expresion  (61)
	expresion : expresion . SIM_COMIG expresion  (62)
	expresion : expresion . COR_AB expresion COR_CE  (72)
	expresion : expresion . SIM_PTO IDENT  (73)

	COR_AB  shift 87
	OP_MAS  shift 88
	OP_MENOS  shift 89
	OP_MUL  shift 90
	OP_DIV  shift 91
	OP_MOD  shift 92
	SIM_COMIG  shift 93
	SIM_DIST  shift 94
	SIM_MAIG  shift 95
	SIM_MEIG  shift 96
	SIM_IG  shift 97
	SIM_MA  shift 98
	SIM_ME  shift 99
	BOOL_AND  shift 100
	BOOL_OR  shift 101
	SIM_PTO  shift 102
	.  error


state 69
	sentenciasopc : sentencias .  (35)
	sentencias : sentencias . sentencia  (37)

	CTE_ENTERA  shift 52
	CTE_DECIMAL  shift 53
	PAR_AB  shift 54
	COR_AB  shift 13
	CHAR  shift 55
	IDENT  shift 56
	OP_MENOS  shift 57
	BOOL_NOT  shift 58
	RES_READ  shift 59
	RES_WRITE  shift 60
	RES_WHILE  shift 61
	RES_IF  shift 62
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	RES_RET  shift 63
	LLA_CE  reduce 35

	tipo  goto 65
	while  goto 67
	expresion  goto 68
	if  goto 70
	sentencia  goto 103


state 70
	sentencia : if .  (44)

	.  reduce 44


state 71
	sentencias : sentencia .  (38)

	.  reduce 38

